--- a/projet/templates/bases/base.html
+++ b/projet/templates/bases/base.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="/static/css/style.min.css">
 
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
-	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
 </head>
@@ -209,6 +209,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
 
 	<!-- Main JS -->
-	<script src="/static/js/app.min.js "></script>
+	<script src="/static/js/app.min.js"></script>
+	<script src="/static/js/axios.min.js"></script>
+
+	<!-- Vue js -->
+	<script src="/static/js/vue.js"></script>
+	<script src="/static/js/component.js"></script>
 </body>
 </html>
