--- a/projet/templates/pages/about.html
+++ b/projet/templates/pages/about.html
@@ -1,82 +1,48 @@
 {% extends "bases/base.html" %}
 {% block main %}
-    <section id="gtco-welcome" class="bg-white section-padding">
-    <welcome-todo 
-    v-bind:image="image" 
-    v-bind:titre="titre"
-    v-bind:contenue="contenue"
-    v-bind:description="description"
-    v-bind:image1="image1"
-    v-bind:description1="description1" 
-    v-bind:image2="image2" 
-    v-bind:description2="description2" 
-    v-bind:image3="image3"
-    v-bind:description3="description3"></welcome-todo>
-    </section>
-<script>
-    Vue.component('welcome-todo', 
-                {
-                    props: ['image', 'titre', 'contenue', 'description', 'image1', 'description1', 'image2', 'description2', 'image3', 'description3'],
-                    template: `
-                    <div class="container">
-        <div class="section-content">
-            <div class="row">
-                <div class="col-sm-5 img-bg d-flex shadow align-items-center justify-content-center justify-content-md-end img-2" style="background-image: url({{ image }}">
-                    
-                </div>
-                <div class="col-sm-7 py-5 pl-md-0 pl-4">
-                    <div class="heading-section pl-lg-5 ml-md-5">
-                        <span class="subheading">
-                            About
-                        </span>
-                        <h2>
-                            {{ titre }}
-                        </h2>
+<section id="gtco-welcome" class="bg-white section-padding">
+        <div class="container">
+            <div class="section-content">
+                <div class="row">
+                    <div class="col-sm-5 img-bg d-flex shadow align-items-center justify-content-center justify-content-md-end img-2" style="background-image: url(/static/img/hero-2.jpg);">
+                        
                     </div>
-                    <div class="pl-lg-5 ml-md-5">
-                        <p>{{ contenue }}</p>
-                        <h3 class="mt-5">{{ description }}</h3>
-                        <div class="row">
-                            <div class="col-4">
-                                <a href="#" class="thumb-menu">
-                                    <img class="img-fluid img-cover" src="{{ image1 }}" />
-                                    <h6>{{ description1 }}</h6>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="#" class="thumb-menu">
-                                    <img class="img-fluid img-cover" src="{{ image2 }}" />
-                                    <h6>description2</h6>
-                                </a>
-                            </div>
-                            <div class="col-4">
-                                <a href="#" class="thumb-menu">
-                                    <img class="img-fluid img-cover" src="{{ image3 }}"/>
-                                    <h6>{{ description3 }}</h6>
-                                </a>
+                    <div class="col-sm-7 py-5 pl-md-0 pl-4">
+                        <div class="heading-section pl-lg-5 ml-md-5">
+                            <span class="subheading">
+                                About
+                            </span>
+                            <h2>
+                                Welcome to Resto
+                            </h2>
+                        </div>
+                        <div class="pl-lg-5 ml-md-5">
+                            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                            <h3 class="mt-5">Special Recipe</h3>
+                            <div class="row">
+                                <div class="col-4">
+                                    <a href="#" class="thumb-menu">
+                                        <img class="img-fluid img-cover" src="/static/img/hero-1.jpg" />
+                                        <h6>Australian Organic Beef</h6>
+                                    </a>
+                                </div>
+                                <div class="col-4">
+                                    <a href="#" class="thumb-menu">
+                                        <img class="img-fluid img-cover" src="/static/img/hero-1.jpg" />
+                                        <h6>Australian Organic Beef</h6>
+                                    </a>
+                                </div>
+                                <div class="col-4">
+                                    <a href="#" class="thumb-menu">
+                                        <img class="img-fluid img-cover" src="/static/img/hero-1.jpg"/>
+                                        <h6>Australian Organic Beef</h6>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>`
-                })
-            
-            var welcome = new Vue({
-                el: '#gtco-welcome',
-                data: {
-                    image: '/static/img/hero-2.jpg',
-                    titre: 'Welcome to Resto',
-                    contenue: 'On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.',
-                    description: 'Special Recipe',
-                    image1: '/static/img/hero-1.jpg',
-                    description1: 'Australian Organic Beef',
-                    image2: '/static/img/hero-1.jpg',
-                    description2: 'Australian Organic Beef',
-                    image3: '/static/img/hero-1.jpg',
-                    description3: 'Australian Organic Beef',
-                }
-            })
-</script>
+    </section>
 {% endblock main %}
