--- a/projet/templates/bases/base.html
+++ b/projet/templates/bases/base.html
@@ -118,6 +118,9 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="{% url 'reservation'%}">Reservation</a>
+					</li>
+					<li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                     </li>
                 </div>
                 <li class="nav-item">
